finished the login and database set up
